reduce guava usage in AbstractPackageSanityTests